--- a/dot_bundle/config
+++ b/dot_bundle/config
@@ -1,7 +1,7 @@
 ---
 BUNDLE_DISABLE_SHARED_GEMS: "true"
-BUNDLE_BUILD__LIBV8: "--with-cxx=/usr/local/bin/g++-4.2"
-BUNDLE_CLEAN: "true"
-BUNDLE_JOBS: "8"
+BUNDLE_BUILD__LIBV8: "--with-system-v8"
+BUNDLE_JOBS: "16"
 BUNDLE_UPDATE_REQUIRES_ALL_FLAG: "true"
-BUNDLE_PATH: "vendor/bundle"
+BUNDLE_BUILD__THERUBYRACER: "--with-v8-dir=/usr/local/opt/v8@3.15"
+BUNDLE_GLOBAL__BUNDLE_PATH: "vendor/bundle"
