--- a/dot_bundle/config
+++ b/dot_bundle/config
@@ -4,6 +4,6 @@ BUNDLE_BUILD__LIBV8: "--with-system-v8"
 BUNDLE_JOBS: "16"
 BUNDLE_UPDATE_REQUIRES_ALL_FLAG: "true"
 BUNDLE_BUILD__THERUBYRACER: "--with-v8-dir=/usr/local/opt/v8@3.15"
-BUNDLE_GLOBAL__BUNDLE_PATH: "vendor/bundle"
+BUNDLE_PATH: "vendor/bundle"
 BUNDLE_BUILD__MYSQL2: "--with-mysql-lib=/opt/homebrew/opt/mysql/lib --with-mysql-dir=/opt/homebrew/opt/mysql --with-mysql-config=/opt/homebrew/opt/mysql/bin/mysql_config --with-mysql-include=/opt/homebrew/opt/mysql/include"
 BUNDLE_BUILD__PG: "--with-pg-config=/opt/homebrew/opt/libpq/bin/pg_config"
